--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 
     <section class="card">
        <div class="card-wrap">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, facere?</p>
+        <div id="advice">
+          <p><span class="counter">Advice #117</span></p>
+        </div>
+         <div class="advice-content">
+          <p>
+             "It is easy to sit up and take notice, what's difficult is getting up and taking actions"
+          </p>
+         </div>
+         <div class="content-img">
+           <img src="./images/pattern-divider-mobile.svg" alt="">
+         </div>
+
+         <div class="icon">
+          <img src="./images/icon-dice.svg" alt="">
+         </div>
        </div>
     </section>
 
