--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
           </p>
          </div>
          <div class="content-img">
-           <img src="./images/pattern-divider-mobile.svg" alt="">
+          <picture>
+            <source media="(min-width:750px)" srcset="./images/pattern-divider-desktop.svg">
+            <source media="(min-width:465px)" srcset="./images/pattern-divider-mobile.svg">
+            <img src="./images/pattern-divider-mobile.svg" alt="" style="width:auto;">
+          </picture>
          </div>
 
          <div class="icon">
