--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          </div>
 
          <div class="icon">
-          <img src="./images/icon-dice.svg" alt="">
+          <img class="icon-img" src="./images/icon-dice.svg" alt="">
          </div>
        </div>
     </section>
