--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           </picture>
          </div>
 
-         <div class="icon">
+         <button class="icon-btn">
           <img class="icon-img" src="./images/icon-dice.svg" alt="">
-         </div>
+         </button>
        </div>
     </section>
 
