--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="card">
        <div class="card-wrap">
         <div id="advice">
-          <p><span class="counter">Advice #117</span></p>
+          <p><span class="counter">Advice #</span></p>
         </div>
          <div class="advice-content">
           <p>
@@ -29,7 +29,7 @@
           </picture>
          </div>
 
-         <button class="icon-btn">
+         <button class="icon-btn" onclick="fetchAdvice()">
           <img class="icon-img" src="./images/icon-dice.svg" alt="">
          </button>
        </div> 
