--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
 </body>
 </html>
 
-<!-- Advice #Advice ID goes here -->
-
-<!-- "Advice text goes here" -->
-
-<!-- <div class="attribution">
+<div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
   Coded by <a href="#">Your Name Here</a>.
-</div> -->
+</div> 
