--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Advice generator app</title>
-
+  <script src="app.js" defer></script>
 </head>
 <body>
 
@@ -29,14 +29,15 @@
           </picture>
          </div>
 
-         <button class="icon-btn" onclick="fetchAdvice()">
+         <button class="icon-btn">
           <img class="icon-img" src="./images/icon-dice.svg" alt="">
          </button>
        </div> 
      
     </section>
     
-   <script src="app.js" defer></script>
+  
+   <!-- <script src="script.js"></script> -->
 </body>
 </html>
 
